# not-number

./: .gitignore  README.md  main.py  pyproject.toml  util.py
cnn/: README.md  main.py
dataset/: concat_mnist.py  dct_basis.py  img_process.py
notnumberutil/: pyproject.toml
notnumberutil/notnumberutil/: util.py
notnumberutil/notnumberutil/dataset/: concat_mnist.py  dct_basis.py  img_process.py
simplefullconnectnet/: README.md  main.ipynb  main.py  mnist.py  simple_fullconnect_net.py
