[project]
name = "context-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 120
